--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_gray"
     tools:context=".Home_fragment">
 
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="69dp"
+        android:layout_height="wrap_content"
         android:background="@color/lite_gray"
         android:gravity="bottom"
         android:orientation="horizontal"
@@ -68,92 +69,78 @@
 
         </LinearLayout>
 
+
         <TextView
             android:id="@+id/voir_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_gravity="center|center_horizontal"
             android:background="@color/bacgroung_text_continuerr"
-            android:gravity="center"
             android:text="@string/voir_plus"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_continuer"
             android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="179dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
-            android:padding="5dp"
-            app:cardCornerRadius="10dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/card_elevation"
+            android:background="@color/lite_gray"
+            android:orientation="vertical"
+            android:padding="5dp">
 
 
-            <LinearLayout
-                android:layout_width="157dp"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:orientation="vertical"
-                android:padding="5dp">
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="172dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center_horizontal"
+                tools:src="@mipmap/img_user2_picture" />
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Robert Fox"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:textStyle="bold" />
 
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center_horizontal"
-                    tools:src="@mipmap/img_user_picture" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Enseignants de Mathematique"
+                android:textSize="10dp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="Robert Fox"
-                    android:textColor="@color/black"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="Enseignants de Mathematique"
-                    android:textSize="10dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/abonneprofil"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/s_abonner"
-                    android:textColor="#FF8A00"
-                    android:textSize="10dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="160dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
-            android:padding="5dp"
-            app:cardCornerRadius="10dp">
+            <TextView
+                android:id="@+id/abonneprofil"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/s_abonner"
+                android:textColor="#FF8A00"
+                android:textSize="10dp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/card_elevation"
+                android:background="@color/lite_gray"
                 android:orientation="vertical"
                 android:padding="5dp">
 
 
                 <ImageView
 
-                    android:layout_width="wrap_content"
+                    android:layout_width="134dp"
                     android:layout_height="80dp"
                     android:layout_gravity="center_horizontal"
                     tools:src="@mipmap/img_user_picture" />
@@ -188,7 +175,7 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+
 
     </GridLayout>
 
@@ -198,9 +185,9 @@
         android:layout_width="414dp"
         android:layout_height="190dp"
         android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-        tools:ignore="MissingClass,MissingConstraints"
-        tools:layout_editor_absoluteX="-2dp">
+        tools:ignore="MissingClass,MissingConstraints">
 
 
         <LinearLayout
@@ -220,18 +207,33 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/voir_plus1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_gravity="center|center_horizontal"
+            android:background="@color/bacgroung_text_continuerr"
+            android:text="@string/voir_plus"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_continuer"
+            android:textStyle="bold" />
+
         <LinearLayout
-            android:layout_width="180dp"
+            android:layout_width="164dp"
             android:layout_height="141dp"
+            android:layout_margin="@dimen/card_elevation"
             android:layout_row="1"
             android:layout_column="1"
+            android:background="@color/lite_gray"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="164dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center_horizontal"
-                tools:src="@mipmap/img_user_picture" />
+                tools:src="@mipmap/img_user2_picture" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -261,25 +263,17 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-    </GridLayout>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:padding="5dp"
-        app:cardCornerRadius="10dp"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="334dp"
-        tools:ignore="MissingConstraints">
-
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="168dp"
+            android:layout_height="146dp"
+            android:layout_margin="@dimen/card_elevation"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:background="@color/lite_gray"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="156dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center_horizontal"
                 tools:src="@mipmap/img_user_picture" />
@@ -312,8 +306,7 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-
-    </androidx.cardview.widget.CardView>
+    </GridLayout>
 
 
     <GridLayout
@@ -332,7 +325,7 @@
             <TextView
                 style="@style/appbar_title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:gravity="center"
                 android:padding="5dp"
@@ -342,25 +335,45 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/voir_plus2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_vertical"
+            android:background="@color/bacgroung_text_continuerr"
+            android:text="@string/voir_plus"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_continuer"
+            android:textStyle="bold" />
+
         <LinearLayout
-            android:layout_width="176dp"
+            android:layout_width="166dp"
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="0"
+            android:layout_margin="@dimen/card_elevation"
             android:layout_weight="2"
+            android:background="@color/lite_gray"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="71dp"
                 android:layout_gravity="center_horizontal"
-                tools:src="@mipmap/img_user_picture" />
+                tools:src="@mipmap/img_livre_picture" />
+
+            <ImageView
+                android:layout_width="37dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:src="@mipmap/img_ellipse" />
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Robert Fox"
+                android:text="Cournet Henry"
                 android:textColor="@color/black"
                 android:textSize="15dp"
                 android:textStyle="bold" />
@@ -369,19 +382,67 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Livre de Mathematique"
+                android:text="Livres de Mathematique"
                 android:textSize="10dp"
                 android:textStyle="bold" />
 
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="28dp"
+                android:layout_height="24dp"
+
+
+                android:layout_gravity="right"
+                android:src="@drawable/vector" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_margin="@dimen/card_elevation"
+            android:layout_weight="2"
+            android:background="@color/lite_gray"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="71dp"
+                android:layout_gravity="center_horizontal"
+                tools:src="@mipmap/img_livre_picture" />
+
+            <ImageView
+                android:layout_width="37dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:src="@mipmap/img_ellipse" />
+
+
             <TextView
-                android:id="@+id/abonneprofil4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/telecharger"
-                android:textColor="#FF8A00"
+                android:text="Cournet Henry"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Livres de Mathematique"
                 android:textSize="10dp"
                 android:textStyle="bold" />
+
+            <ImageButton
+                android:id="@+id/imageButton1"
+                android:layout_width="28dp"
+                android:layout_height="24dp"
+                android:layout_gravity="right"
+                android:src="@drawable/vector" />
 
         </LinearLayout>
 
@@ -390,7 +451,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="1"
-            android:layout_column="0"
+            android:layout_column="1"
             android:layout_gravity="right|center_vertical"
             android:clickable="true"
             android:src="@android:drawable/ic_menu_add"
@@ -401,15 +462,15 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="412dp"
+        android:layout_height="58dp"
         android:background="@color/lite_gray"
         app:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_menu" >
+        app:menu="@menu/bottom_menu">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
