--- a/app/src/main/res/layout/document_item.xml
+++ b/app/src/main/res/layout/document_item.xml
@@ -1,133 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<GridLayout -->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--   >-->
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="250dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="2dp"
-        android:layout_marginTop="2dp"
-        app:cardCornerRadius="8dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/img_doc"
+                android:layout_width="105dp"
+                android:layout_marginStart="2dp"
+                android:layout_height="match_parent"
+                android:scaleY="1.4"
+                android:src="@mipmap/ic_livre_mathpc"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/img_doc"
-                    android:layout_width="100dp"
-                    android:layout_height="110dp"
-                    app:srcCompat="@drawable/ic_baseline_menu_book_24" />
-
+                android:layout_marginLeft="5dp"
+                android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        app:cardCornerRadius="50dp">
+                        <ImageView
+                            android:id="@+id/img_poster"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            app:srcCompat="@mipmap/ic_profil_tech_round" />
 
-                    <ImageView
+                    </androidx.cardview.widget.CardView>
 
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
-                        app:srcCompat="@drawable/ic_bi_heart" />
-
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/name_poster"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            app:srcCompat="@drawable/ic_vector" />
-
-                        <TextView
-                            android:id="@+id/note"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="(255)" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/isFree"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="10dp"
                         android:fontFamily="@font/poppins_regular"
-                        android:text="free"
-                        android:textColor="#00A524" />
-
-                    <TextView
-                        android:id="@+id/type_doc"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:fontFamily="@font/poppins_regular"
-                        android:text="Cours"
-                        android:textColor="@color/orange" />
+                        android:text="Courtney Henry"
+                        android:textSize="12sp" />
 
                 </LinearLayout>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/img_poster"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_baseline_facebook" />
-
                 <TextView
-                    android:id="@+id/name_poster"
+                    android:id="@+id/title_doc"
+                    style="@style/subtitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:fontFamily="@font/poppins_regular"
-                    android:text="Courtney Henry"
-                    android:textSize="13sp" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/title_doc"
-                style="@style/subtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:layout_marginTop="5dp"
-                android:text="Livre de cuisine" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="5dp"
+                    android:textSize="16sp"
+                    android:text="Livre de cuisine" />
 
                 <TextView
                     android:id="@+id/description_doc"
@@ -138,14 +78,72 @@
                     android:fontFamily="@font/poppins_regular"
                     android:text="Comment faire le plat de vos reves" />
 
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_vector" />
+
+                    <TextView
+                        android:id="@+id/note"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="(255)" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|top"
+                        app:srcCompat="@drawable/ic_bi_heart" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/isFree"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="free"
+                    android:textSize="15sp"
+                    android:textColor="#00A524" />
+                <TextView
+                    android:id="@+id/type_doc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Cours"
+                    android:textSize="15sp"
+                    android:textColor="@color/orange" />
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_gravity="start|bottom"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="10dp"
                     app:srcCompat="@drawable/ic_baseline_cloud_upload_24" />
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
-<!--</GridLayout>-->
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
+
