--- a/app/src/main/res/layout/document_item.xml
+++ b/app/src/main/res/layout/document_item.xml
@@ -30,8 +30,8 @@
                 app:cardCornerRadius="18dp">
                 <ImageView
                     android:id="@+id/img_poster"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     app:srcCompat="@mipmap/ic_profil_tech_round" />
 
             </androidx.cardview.widget.CardView>
